--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,15 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jest</artifactId>
+    <groupId>org.graylog.jest.rest</groupId>
+    <artifactId>jest-elasticsearch-rest</artifactId>
+    <version>2.4.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>Jest Apache HC Jar</name>
-    <description>ElasticSearch Java REST client - Apache HTTP Client package</description>
-    <url>https://github.com/searchbox-io/Jest</url>
+
+    <name>Jest Elasticsearch Low-Level REST Client Jar</name>
+    <description>Elasticsearch Java REST client - Elasticsearch Low-Level REST Client package</description>
+    <url>https://github.com/graylog-labs/jest-elasticsearch-rest</url>
+    <inceptionYear>2017</inceptionYear>
 
     <licenses>
         <license>
@@ -18,27 +22,22 @@
     </licenses>
 
     <scm>
-        <connection>scm:git:git@github.com:searchbox-io/Jest.git</connection>
-        <developerConnection>scm:git:git@github.com:searchbox-io/Jest.git</developerConnection>
-        <url>git@github.com:searchbox-io/Jest.git</url>
+        <connection>scm:git:git@github.com:graylog-labs/jest-elasticsearch-rest.git</connection>
+        <developerConnection>scm:git:git@github.com:graylog-labs/jest-elasticsearch-rest.git</developerConnection>
+        <url>https://github.com/graylog-labs/jest-elasticsearch-rest</url>
     </scm>
+
+    <organization>
+        <name>Graylog, Inc.</name>
+        <url>https://www.graylog.org/</url>
+    </organization>
 
     <developers>
         <developer>
-            <id>TheKingOfTheEast</id>
-            <name>Dogukan Sonmez</name>
-            <email>dogukansonmez@yahoo.com</email>
-        </developer>
-        <developer>
-            <id>ferhatsb</id>
-            <name>Ferhat Sobay</name>
-            <email>ferhat@searchbox.io</email>
-        </developer>
-        <developer>
-            <id>kramer</id>
-            <name>Cihat Keser</name>
-            <email>info@cihatkeser.com</email>
-            <url>http://about.cihatkeser.com</url>
+            <id>graylog</id>
+            <name>Graylog, Inc.</name>
+            <organization>${project.organization.name}</organization>
+            <organizationUrl>${project.organization.url}</organizationUrl>
         </developer>
     </developers>
 
@@ -49,6 +48,11 @@
     </parent>
 
     <dependencies>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>rest</artifactId>
+            <version>5.3.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.lucene</groupId>
@@ -163,4 +167,25 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <systemPropertyVariables>
+                        <tests.jarhell.check>false</tests.jarhell.check>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
